crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__label-scope-error.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/label-scope-error
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0] === PASS
> "" [Choices: "an option" (0) -> 0]
> "an option\n" [Continue]
> "Some content.\n" [Choices: "Found gatherpoint" (0) -> 0]
> "Found gatherpoint\n" [Done]
outcome: Error
