crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__nested-choice-loose-end-in-knot.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/nested-choice-loose-end-in-knot
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0] === PASS
> "" [Choices: "first option" (0) -> 0]
> "first option\n" [Choices: "nested option" (0) -> 0]
> "nested option\n" [Continue]
> "Nested content with no gather.\n" [Done]
outcome: Error
