crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__non-text-in-choice-inner-content.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/non-text-in-choice-inner-content
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "option text" (0) -> 0]
> "option text. Conditional bit. Next.\n" [Done]
outcome: Done
