crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__once-only-fallback-consumed.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/once-only-fallback-consumed
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0, 0, 0] === PASS
> "" [Choices: "l" (0) -> 0]
> "body\n" [Choices: "z" (0) -> 0]
> "z body\n" [Continue]
> "b line\n" [Choices: "l" (0) -> 0]
> "body\n" [Continue]
> "b line\n" [Choices: "l" (0) -> 0]
> "body\n" [Done]
outcome: Error
